    incomplete
  * Added wunui functionality that might help with transparent widgets

  [ Hampus Wessman ]
  * Fixed a bug in virtualdisk.py

  [ Agostino Russo ]
  * Fixed formatting of the partitioning section in the preseed file
  * Do not show the console when running pylauncher (thanks Hampus
    Wessman)
  * Added memory and size checks
  * Added tabstops to controls in winui
  * When checking the version string, be less strict and allow
    for subversions (thanks Evan Dandrea)
  * Fixed typo in the grub menu template
  * Run the uninstaller if the binary name begings with 'uninstall-'
  * Make sure that the backup dir is named after the target dir
  * Typo, it is preseed.cfg and not preseed.conf
  * Cleaned up custom installation hooks
  * Trailing white space does not get along well with line continuations
    in preseed.cfg
  * Improved arch detection
  * Strip cpuid binary to reduce size
  * Set the version and revision via the makefile
  * Verify metalink md5 signature using openpgp and python-crypto
  * Check md5 of blobs installed within wine during compilation
  * Skip console logging when running as a packaged executable (pythonw)
  * Use a local 32 bit CD/ISO even if the CPU arch is 64 bit
  * Added license to source files
  * More precise progress reporting
  * Fixed automatic version string generation
  * Preseed user-setup/encrypt-home (thanks Evan Dandrea)
  * Use the old uninstaller, if available, to remove an old installation
  * Editing an existing registry item requires opening the key with a
    special flag
  * Modified uninstaller behaviour, it now uninstalls the directory
    specified in the registry
  * Make sure that the uninstallers of previous versions can be launched
  * Only show the subtask progressbar when the progress is non-zero
  * ConfigParser is not adequate for editing boot.ini, replaced with ad
    hoc implementation

 -- Agostino Russo <agostino.russo@gmail.com>  Sat, 31 Jan 2009 20:31:36 +0000