@@ -12,7 +12,7 @@ min_iso_size=600000000
 max_iso_size=900000000
 min_disk_space_mb=3000
 min_memory_mb=256
-
+support=http://www.ubuntu.com/support
 
 [Ubuntu-i386]
 arch=i386
